--- a/src/main/resources/templates/goodsList.html
+++ b/src/main/resources/templates/goodsList.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" th:src="@{/js/common.js}"></script>
 </head>
 <body>
-<p th:text="'Hello:'+${user.nickname}"></p>
+<!--<p th:text="'Hello:'+${user.nickname}"></p>-->
 <div class="panel panel-default">
     <div class="panel-heading">秒杀商品列表</div>
     <table class="table" id="goodslist">
@@ -27,14 +27,14 @@
             <td>库存数量</td>
             <td>详情</td>
         </tr>
-        <!--<tr th:each="goods,goodsStat : ${goodsList}">
+        <tr th:each="goods,goodsStat : ${goodsList}">
             <td th:text="${goods.goodsName}"></td>
             <td><img th:src="@{${goods.goodsImg}}" width="100" height="100"/></td>
             <td th:text="${goods.goodsPrice}"></td>
             <td th:text="${goods.seckillPrice}"></td>
             <td th:text="${goods.stockCount}"></td>
             <td><a th:href="'/goodsDetail.htm?goodsId='+${goods.id}">详情</a></td>
-        </tr>-->
+        </tr>
     </table>
 </div>
 </body>
