--- a/src/main/resources/templates/goodsDetail.html
+++ b/src/main/resources/templates/goodsDetail.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <td>秒杀开始时间</td>
-            <!--<td th:text="${#dates.format(goods.startDate,'yyyy-MM-dd HH:mm:ss')}"></td>
+            <td th:text="${#dates.format(goods.startDate,'yyyy-MM-dd HH:mm:ss')}"></td>
             <td id="seckillTip">
                 <input type="hidden" id="remainSeconds" th:value="${remainSeconds}">
                 <span th:if="${secKillStatus eq 0}">秒杀倒计时: <span id="countDown" th:text="${remainSeconds}"></span>秒
@@ -40,7 +40,7 @@
                 <span th:if="${secKillStatus eq 1}">秒杀进行中</span>
                 <span th:if="${secKillStatus eq 2}">秒杀已结束</span>
             </td>
-            <td>
+            <!--<td>
                 <form id="secKillForm" method="post" action="/seckill/doSeckill">
                     <input type="hidden" name="goodsId" th:value="${goods.id}">
                     <button class="btn btn-primary btn-block" type="submit" id="buyButton">立即秒杀</button>
@@ -63,11 +63,11 @@
 </div>
 </body>
 <script>
-    /*$(function () {
+    $(function () {
         countDown();
-    });*/
+    });
 
-    /*function countDown() {
+    function countDown() {
         var remainSeconds = $("#remainSeconds").val();
         var timeout;
         //秒杀还未开始
@@ -89,7 +89,7 @@
             $("#buyButton").attr("disabled", true);
             $("#seckillTip").html("秒杀已经结束");
         }
-    };*/
+    };
 
 </script>
 </html>
